web-infras/parser/tests/fixtures/self-added/let-as-identifier/module/let-as-func-expr-name/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,20)
1|const f = function let() {
 |                  ^
[SyntaxError]: unexpect keyword in strict mode (1,20)
1|const f = function let() {
 |                  ^
[SyntaxError]: unexpect keyword in strict mode (1,20)
1|const f = function let() {
 |                  ^
